--- a/style.css
+++ b/style.css
@@ -1,27 +1,146 @@
-* {
+/* * {
     border: 1px solid red;
-}
+} */
 .text-white {
-    color: #f9faf8;
+    color: #F9FAF8;
 }
-
+.text-grey {
+    color: #E5E7EB;
+}
+.background-dark {
+    background-color: #1F2937;
+}
 body {
     display: flex;
     flex-direction: column;
+    margin: 0;
 }
 a {
     text-decoration: none;
+    color: #E5E7EB;
 }
 .header {
     display: flex;
     justify-content: space-between;
-    background-color: #1F2937;
     font-size: 24px;
+    padding: 30px 60px;
+}
+.header h2 {
+    margin: 0;
 }
 .header-links {
     display: flex;
-    gap: 10px;
+    gap: 12px;
     align-items: center;
     font-size: 18px;
+}
+.top {
     color: #E5E7EB;
+    display: flex;
+    padding: 12px 60px;
+}
+.top img {
+    display: flex;
+    width: 60%;
+    height: 200px;
+}
+.content-top {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.content-top * {
+    margin: 0;
+}
+.mid-top {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    text-align: center;
+    padding: 12px 60px;
+}
+.mid-top h2 {
+    margin-top: 10px;
+}
+.cards {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+.card {
+    flex: 0;
+    flex-wrap: wrap;
+}
+.card img {
+    border: 2px;
+    border-color: #3882f6;
+    border-style: solid;
+    min-height: 150px;
+    min-width: 150px;
+    border-radius: 10%;
+    padding: 4px;
+}
+.mid-bot {
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    padding: 12px 60px;
+}
+.quote {
+    font-style: italic;
+    font-size: 36px;
+    font-weight: 200;
+}
+.quote-name {
+    text-align: end;
+    margin-right: 50px;
+    font-weight: bold;
+    font-size: 24px;
+}
+.bot {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    min-height: 300px;
+    justify-content: center;
+}
+.bot-banner {
+    display: flex;
+    background-color: #3882f6;
+    flex: 0;
+    align-self: center;
+    padding: 20px;
+    border-radius: 10px;
+    width: 70%;
+    justify-content: space-around;
+}
+.bot-banner button {
+    border-color: white;
+    align-self: center;
+}
+.bot-banner-text {
+    font-size: 16px;
+}
+.bot-banner-text p {
+    margin: 5px;
+}
+.cta-text {
+    font-size: 28px;
+}
+.footer {
+    display: flex;
+    height: 70px;
+    align-items: center;
+    justify-content: center;
+}
+.signup-button {
+    background-color: #3882f6;
+    padding: 6px 18px;
+    width: fit-content;
+    border-radius: 5px;
+    
+}
+.content-top h1 {
+    font-size: 48px;
 }
